<resources>
    <string name="app_name">SmartSound</string>
    <string name="usuario">Usuario:</string>
    <string name="ingrese_su_usuario">Ingrese su Usuario</string>
    <string name="nombre">Nombre:</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="apellidos">Apellidos:</string>
    <string name="ingrese_sus_apellidos">Ingrese sus apellidos</string>
    <string name="correo">Correo:</string>
    <string name="ingrese_su_correo">Ingrese su Correo</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="ingrese_su_contrase_a">Ingrese su Contraseña</string>
    <string name="listas_personas">Listas Personas</string>
    <string name="telefono">Telefono:</string>
    <string name="tel_fono">Teléfono</string>
    <string name="ingrese_un_celular">Ingrese un celular</string>
</resources>